--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,12 @@ h1 {
   text-align: center;
   font-size: 1.5em;
 }
+
+.black-background {
+  background-color: black;
+  color: white;
+}
+.white-background {
+  background-color: white;
+  color: black;
+}
